// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis Props Direction Middle 1`] = `
"<view class=\\"nut-ellipsis\\">
  <!--v-if-->
  <view>NutUI3.0上线后我们研发团队...
    <!--v-if-->...UI 中增加小程序多端适配的能力。
  </view>
  <!--v-if-->
</view>"
`;

exports[`Ellipsis Props Direction Start 1`] = `
"<view class=\\"nut-ellipsis\\">
  <!--v-if-->
  <view>
    <!--v-if-->...多的开发者带来便利，我们决定在 NutUI 中增加小程序多端适配的能力。
  </view>
  <!--v-if-->
</view>"
`;

exports[`Ellipsis Props Rows 1`] = `
"<view class=\\"nut-ellipsis\\">
  <!--v-if-->
  <view>
    <!--v-if-->... 的相关组件，但是在跨端小程序的开发过程中，发现没有合适的组件库可以支持多端开发。为了填补这一空白，同时为了优化开发者体验，让 NutUI 能够为更多的开发者带来便利，我们决定在 NutUI 中增加小程序多端适配的能力。
  </view>
  <!--v-if-->
</view>"
`;
